# labeler

./: .dockerignore  .env  Dockerfile  README.md  action.yaml  action.yml  main.py  pyproject.toml
.github/workflows/: labeler.yaml
src/labeler/: main.py
